# orca

./: .env.example  .gitignore  AGENT_CONNECT.md  CLAUDE.md  PROMPT.md  PROMPT_ARITRA.md  README.md  TASKS.md  aritra_agent.md  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  test_modal.py  turbo.json
CLAUDE/: ryun_log.md  ryun_prompt.md  ryun_prompt_v2.md  ryun_task.md
apps/api/: .env.example  pyproject.toml
apps/api/src/: config.py  db.py  main.py  redis_client.py  ws.py
apps/api/src/models/: agent.py  analysis.py  payment.py  routing.py  simulation.py  telemetry.py
apps/api/src/routers/: agents.py  analysis.py  metrics.py  payments.py  routing.py  simulation.py  telemetry.py
apps/api/src/services/: analysis.py  cloud_inference.py  metrics.py  openai_inference.py  orchestrator.py  payment.py  routing.py  telemetry.py  world_model.py
apps/web/: next.config.ts  package.json  tailwind.config.ts  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/contexts/: analysis-context.tsx
apps/web/data/: agent-scenario.ts
apps/web/hooks/: use-analysis.ts  use-wallet.ts  useAgentNetwork.ts  useSimulation.ts  useTelemetry.ts  useWebSocket.ts
apps/web/lib/: agent-paths.ts  animation-phases.ts  api-config.ts  (+15 more)
assets/: talking_points.md
assets/sample_dataset/: orca_sample_record.json
shared/: constants.py
shared/schemas/: evacuation.json  evacuation_routes.json  fire_severity.json  personnel.json  personnel_recommendation.json  routing.json  simulation.json  structural.json  structural_analysis.json  telemetry.json
(+53 files in other folders)
