[project]
name = "world-gen-emergency-api"
version = "0.1.0"
description = "FastAPI backend for simulated emergency response environments"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.8",
  "uvicorn[standard]>=0.32.1",
  "sqlalchemy>=2.0.36",
  "asyncpg>=0.30.0",
  "redis>=5.2.1",
  "websockets>=14.2",
  "python-dotenv>=1.0.1",
  "pydantic>=2.10.6",
  "anthropic>=0.52.0",
]

[project.scripts]
app = "src.main:app"
